Fixed some spacing issues.

--- a/td1/seance.css
+++ b/td1/seance.css
@@ -9,10 +9,6 @@ h1 {
     margin-top: 0px;
 }
 
-hr {
-	color:orange;
-}
-
 .noMargin {
 	  margin: 0;
 }
@@ -20,13 +16,22 @@ hr {
 
 /*** Details of the seances ***/
 
+#seances hr {
+	  color:orange;
+}
+
 #detail_seance {
-	border-spacing: 0;
+    border-spacing: 0;
+    width: 100%;
 }
 
 #detail_seance td,th {
     border: 1pt solid midnightblue;
 	  padding: 3;
+}
+
+#detail_seance th {
+    background-color: rgb(247, 238, 207);
 }
 
 #detail_seance td.right {
@@ -39,10 +44,6 @@ hr {
 
 #detail_seance td.right {
     padding: 1em;
-}
-
-#seances {
-    /*float: right;*/
 }
 
 
